<resources>
    <string name="app_name">Meal Planner</string>
    <string name="mealCountHint">Enter number of meals</string>
    <string name="getMealButton">Get Meals</string>
    <string name="RandomMeal">Random Meal Information Will Display Here</string>
    <string name="RandomMealButton">Find Random Meals</string>
    <string name="Ingredients">Find Ingredients for Your Meals</string>
    <string name="WelcomeScreen">Welcome to the Meal Planner! \nPlan your meals here!</string>
    <string name="MealPlannerIntro">Random Meals Here!</string>
    <string name="HomeScreenButton">Return Home</string>
    <string name="MealDisplay">Your random meals will be displayed here:</string>
    <string name="maxPrice">Desired Max Price (ex: 20)</string>
    <string name="numMeals">Desired Number of Meals (ex: 3)</string>
    <string name="aboutTitle">About Us:</string>
    <string name="findingMeals">Finding Meals:</string>
    <string name="budget">Budgeting Meals:</string>
    <string name="mission">Our Overall Mission:</string>
    <string name="aboutUsButton">About Us</string>

    <string name="missionStatement1">Have you ever been wanting to eat new foods, but were unsure what to eat? Simply Meals is the perfect solution for you.</string>
    <string name="missionStatement2">Here at Simply Meals, we strive on finding you random new meals that meet your budget. If you receive a meal you do no like, reroll the randomizer and find new ones!</string>
    <string name="missionStatement3">Once you find a meal you would like to cook, you are able to see the ingredients you need to purchase, as well as the recipe to follow to cook the meal!</string>
    <string name="missionStatement4">Note: All of our random meals and prices are gathered from spoonacular.com. Spoonacular is an API that provides access to random meals, including their prices and recipes.</string>

    <string name="helpButton">Help</string>
    <string name="howToUse">Enter a maximum amount of money you are willing to spend
        and how many meals you would like to eat this week, and click \"Get Meals\" to generate.</string>
    <string name="back">Back</string>

    <!-- Nav Bar -->
    <string name="home_nav">Home</string>
    <string name="random_nav">Random Meals</string>
    <string name="help_nav">Help</string>
</resources>